--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: ~/root
     docker:
-      - image: cimg/python:3.9.0
+      - image: circleci/python:3.9.0
     steps:
         - checkout
         - run: python --version
