--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,5 +36,5 @@ jobs:
       - name: python main
         run: python main.py
       - name: python test
-        run: python test.py
+        run: python main.py
 
