--- a/.github/workflows/buid_publish.stable.yml
+++ b/.github/workflows/buid_publish.stable.yml
@@ -19,6 +19,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Build stable distribution
         run: |
+          echo ${{ github.ref }}
           rm -rf dist/*
           python setup.py sdist bdist_wheel
       - name: Publish distribution to PyPI
