--- a/.github/workflows/buid_publish.stable.yml
+++ b/.github/workflows/buid_publish.stable.yml
@@ -26,4 +26,4 @@ jobs:
       - name: Publish distribution to PyPI
         uses: pypa/gh-action-pypi-publish@master
         with:
-          password: ${{secrets.autotonne}}
+          password: ${{secrets.automlkiller}}
